--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 		<title>Document</title>
 		<script charset="utf-8" src="./main.js" defer></script>
+		<script charset="utf-8" src="./exec.js" defer></script>
 		<style type="text/css" media="screen">
 		
 			@font-face {
@@ -25,7 +26,7 @@
 				margin: 0;
 				position: relative;
 				font-family: "Temple OS";
-				font-size: 13px;
+				font-size: 16px;
 				color: white;
 				word-break: break-all;
 			}
