--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 						url("./res/temple_font.woff") format("woff"),
 						url("./res/temple_font.otf") format("opentype");
 			}
+			
+			@keyframes test {
+				0% { opacity: 0; }
+				100% { opacity: 1; }
+			}
 
 			html
 			{
@@ -29,6 +34,7 @@
 				font-size: 16px;
 				color: white;
 				word-break: break-all;
+				animation: test 1s;
 			}
 			
 			#background
@@ -36,7 +42,7 @@
 				position: absolute;
 				width: 100%;
 				height: 100%;
-				background: url("./res/temple_girl.png");
+				/*background: url("./res/temple_girl.png");*/
 				background-size: contain;
 				opacity: calc(1/4);
 				z-index: -5;
