--- a/index.html
+++ b/index.html
@@ -36,21 +36,26 @@
 				word-break: break-all;
 				animation: test 1s;
 			}
-			
-			#background
+
+			#computer
 			{
 				position: absolute;
 				width: 100%;
 				height: 100%;
-				/*background: url("./res/temple_girl.png");*/
-				background-size: contain;
-				opacity: calc(1/4);
-				z-index: -5;
+			}
+			#desktop
+			{
+				position: relative;
+				width: 100%;
+				height: 100%;
+				background-color: #f1f1f1;
+				overflow: hidden;
 			}
 		</style>
 	</head>
 	<body>
-		<div id="background"></div>
-		<div id="result"></div>
+		<div id="computer">
+			<div id="desktop"></div>
+		</div>
 	</body>
 </html>
