fixing the window fullscreen, window dimension/position settings and doing some stuff on memory

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				min-height: 100%;
 				margin: 0;
 				position: relative;
-				font-family: "Temple OS";
+				font-family: "Liberation Mono";
 				font-size: 16px;
 				color: white;
 				word-break: break-all;
